--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.1)
-project(csh)
+project(seash)
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 
@@ -9,21 +9,18 @@ set(CMAKE_BUILD_TYPE Release)
 
 set(SRC ${PROJECT_SOURCE_DIR}/src)
 
-set(SRC_AUTOCOMPLETE ${PROJECT_SOURCE_DIR}/CLI-Autocomplete/src)
-
 set(EXECUTABLE_OUTPUT_PATH bin)
 
 # find files
 file(GLOB_RECURSE source_files 
 	${SRC}/*
-	${SRC_AUTOCOMPLETE}/*
 )
 
 
 # csh executable
 add_executable(
-  csh
+  seash
   ${source_files}
 )
 
-install(TARGETS csh DESTINATION bin)
+install(TARGETS seash DESTINATION bin)
