--- a/AUR/PKGBUILD
+++ b/AUR/PKGBUILD
@@ -1,17 +1,22 @@
-# Maintainer: koraynilay <koray.fra@gmail.com>
-pkgname=seashell
+# Maintainer: Mirko Rovere <04mirko@libero.it>
+# Contributor: koraynilay <koray.fra@gmail.com>
+
+pkgname=seashell-git
 pkgver=0.1
 pkgrel=1
 pkgdesc="A Fast and Simple UNIX shell in C"
 arch=(x86_64)
-url="https://github.com/mirko-r/seashell"
+url="https://github.com/mirko-r/SeaShell"
 license=('MIT')
 depends=('readline')
 makedepends=('cmake' 'make')
-source=("git+$url")
+source=("git+https://github.com/Mirko-r/SeaShell.git")
 md5sums=("SKIP")
+
+_name="SeaShell"
+
 build() {
-	cd "${srcdir}/${pkgname}"
+	cd "${srcdir}/$_name"
 	mkdir build
 	cd build
 	cmake ..
@@ -19,9 +24,9 @@ build() {
 }
 
 package() {
-	cd "${srcdir}/${pkgname}/build"
+	cd "${srcdir}/$_name/build"
 	DESTDIR="$pkgdir/" make install
 
 	# install license
-	install -D -m644 "${srcdir}/${pkgname}/LICENSE" "${pkgdir}/usr/share/licenses/${pkgname/-git$/}/LICENSE"
+	install -D -m644 "${srcdir}/$_name/LICENSE" "${pkgdir}/usr/share/licenses/${_name/-git$/}/LICENSE"
 }
