--- a/AUR/PKGBUILD
+++ b/AUR/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: koraynilay <koray.fra@gmail.com>
 
 pkgname=seashell-git
-pkgver=0.1
+pkgver=0.0.5-alpha
 pkgrel=1
 pkgdesc="A Fast and Simple UNIX shell in C"
 arch=(x86_64)
